fixed alignment issue

--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,8 @@
 }
 .sec2-text-ctn {
   color: #000;
-  padding: 7vh 8vw 4vh;
+  padding: 7vh 7vw 4vh;
+  /* background-color: red; */
 }
 .before {
   height: 80vh;
@@ -86,12 +87,6 @@ p.faded-text {
   font-weight: 700;
   line-height: 4px;
 }
-.input{
-  border-bottom: 1px solid #c1c3c5;
-  display: block;
-  width: 100%;
-  outline: none;
-}
 .contact-us {
   color: #374151;
   /* background-color: #000000 !important; */
@@ -112,6 +107,10 @@ p.faded-text {
   padding: 7vh 0;
 }
 .form-ctn {
+  /* background-color: black; */
+  overflow-x: hidden;
+  width: 100%;
+  max-width: inherit;
   /* padding: 4vh 5vw; */
 
 }
@@ -119,7 +118,8 @@ p.faded-text {
   padding: 2vh 0vw;
 }
 .form-ctn .input {
-  width: 100%;
+  width: 40vw;
+  max-width: 100%;
   height: 50px;
   outline: #4f46e5;
   border: 2px solid #4f46e5;
@@ -138,8 +138,6 @@ p.faded-text {
   background-color: #4f46e5;
   border-radius: 5px;
   margin-top: 3vh;
-  /* margin-right: auto; */
-  /* margin-left: 1vw; */
   text-align: center;
   display: flex;
   flex-direction: row;
